ADD: Auth added using Identity

--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Database": "Server=localhost,1433;Database=Dukan;User Id=SA;Password=reallyStrongPwd123;TrustServerCertificate=true"
+    "Database": "Server=localhost,1433;Database=Dukan;User Id=SA;Password=reallyStrongPwd123;TrustServerCertificate=true",
+    "WebIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
